# smarteval

./: .gitignore  AGENTS.md  DESIGN.md  README.md  package-lock.json  package.json  pyproject.toml
deterministic_pipeline/: README.md  __init__.py  fake_pipeline.py  run_demo.py  sample_encounter.yaml
deterministic_pipeline/configs/: balanced.yaml  fast.yaml  golden.yaml
docs/: README.md  cli.md  configuration.md  development.md  generators-and-artifacts.md  graph.md  optimization.md  pipelines-and-asr.md  scoring-and-gates.md  smarteval_claude_code_codex_integration_plan.md  smarteval_context_for_ai_coding_agents.md  smarteval_implementation_tasks.md
docs/superpowers/plans/: 2026-04-17-asr-note-pipeline.md
docs/superpowers/specs/: 2026-04-17-asr-note-pipeline-design.md  2026-04-18-codex-proposer-optimizer-design.md
examples/: __init__.py
examples/asr_manifest/: __init__.py  golden.jsonl  pipeline_runner.py  smarteval.yaml  smarteval_balanced.yaml  smarteval_best.yaml  smarteval_fast.yaml  smarteval_golden.yaml
examples/asr_manifest/rubrics/: note_quality.yaml
examples/basic_text/: __init__.py  generator.py  golden.jsonl  smarteval.yaml
fixtures/demo/: target.js
fixtures/image/: target.js
scripts/: optimize_loop.py
src/: agentTask.ts  cli.ts  config.ts  doctor.ts  evaluators.ts  image.ts  index.ts  judges.ts  planner.ts  report.ts  review.ts  runner.ts  schemas.ts
src/smarteval/: __init__.py
src/smarteval/cli/: __init__.py  main.py
src/smarteval/core/: __init__.py  codex_client.py  config.py  fingerprint.py  golden.py  improvement_trace.py  model_swap.py  models.py  openai_client.py  paths.py  pipeline.py  rate_limit.py  rebaseline.py  render.py  (+6 more)
templates/agent-pack/: AGENTS.md  CLAUDE.md
tests/: config.test.ts  doctor.test.ts  evaluators.test.ts  fixture-e2e.test.ts  helpers.py  image-eval.test.ts  judges.test.ts  planner.test.ts  report.test.ts  runner.test.ts  schema.test.ts  test_config.py  test_deterministic_pipeline.py  test_framework_semantics.py  test_graph_report.py  test_openai_integration.py  test_optimization_loop.py  test_pipeline_generator.py  test_rescore_and_proposer.py  test_router_and_ledger.py  test_runner.py
web/: .gitignore  PLAN.md  astro.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts
web/scripts/: export-graph.mjs
(+191 files in other folders)
