[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smarteval"
version = "0.1.0"
description = "A Python-first framework for evaluating non-deterministic systems."
readme = "DESIGN.md"
requires-python = ">=3.12"
dependencies = [
  "jsonschema>=4.22,<5",
  "openai>=1.109.0",
  "pydantic>=2.7,<3",
  "PyYAML>=6.0",
  "typer>=0.12,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
smarteval = "smarteval.cli.main:app"

[project.entry-points."smarteval.generators"]
openai = "smarteval.plugins.generators.openai:OpenAIGenerator"
codex = "smarteval.plugins.generators.openai:CodexGenerator"
script = "smarteval.plugins.generators.script:ScriptGenerator"
pipeline = "smarteval.plugins.generators.pipeline:PipelineGenerator"

[project.entry-points."smarteval.contracts"]
json_schema = "smarteval.plugins.contracts.json_schema:JSONSchemaValidator"
pydantic_model = "smarteval.plugins.contracts.pydantic_model:PydanticModelValidator"
regex = "smarteval.plugins.contracts.regex:RegexValidator"
length_bounds = "smarteval.plugins.contracts.length_bounds:LengthBoundsValidator"
custom_predicate = "smarteval.plugins.contracts.custom_predicate:CustomPredicateValidator"

[project.entry-points."smarteval.scorers"]
exact_match = "smarteval.plugins.scorers.exact_match:ExactMatchScorer"
regex_match = "smarteval.plugins.scorers.regex_match:RegexMatchScorer"
llm_rubric = "smarteval.plugins.scorers.llm_rubric:LLMRubricScorer"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
